updated the UI and resolved the spacing erro

--- a/src/Components/HomePage/style.css
+++ b/src/Components/HomePage/style.css
@@ -4,17 +4,17 @@
 
 .container{
     display: flex;
-    width: 320px;
+    width: 300px;
     padding: 10px 0;
-
-    border-radius: 8px;
+    background: white;
+    border-radius: px;
     flex-direction: column;
     align-items: center;
 }
 .circular-progress{
     position: relative;
-    width: 150px;
-    height: 150px;
+    width: 120px;
+    height: 120px;
     border-radius: 50%;
     background: conic-gradient(#7d2ae8 3.6deg,#ededed 300deg);
     display: flex;
@@ -25,8 +25,8 @@
 .circular-progress::before{
     content: "";
     position: absolute;
-    height: 130px;
-    width: 130px;
+    height: 105px;
+    width: 105px;
     border-radius: 50%;
     /* background-color: white; */
     background-image: radial-gradient(circle,#9650DB,#25005C);
